Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
- <!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
@@ -547,7 +548,7 @@
 <input type="radio" id="skewers" name="menu">
 <input type="radio" id="wraps" name="menu">
 
-<div class="menu-container first-row">
+<div class="menu-container">
     <label for="margherita" class="card">
        <img src="https://i.pinimg.com/736x/52/36/32/5236327e1023765d6e8bb026c0e98bfe.jpg" alt="Margherita Pizza" class="margherita-img">
        <div class="card-content">
@@ -566,8 +567,6 @@
          <label for="modal-toggle" class="order-btn">Order</label>
        </div>
     </label>
-</div>
-<div class="menu-container second-row">
     <label for="burger" class="card">
        <img src="https://i.pinimg.com/736x/74/89/60/748960013e95d2e993ef293e37e89378.jpg" alt="Burger" class="burger-img">
        <div class="card-content">
