--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -364,6 +363,51 @@
       .sub-card {
         width: 280px;
       }
+    }
+
+    nav ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+    nav li {
+      margin: 5px 10px;
+    }
+    @media (max-width: 600px) {
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+    .menu-container, .sub-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      justify-items: center;
+    }
+    .card img, .sub-card img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+    @media (max-width: 991px) {
+      .menu-container { grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); }
+      .sub-cards { grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); }
+    }
+
+    @media (max-width: 480px) {
+      .menu-container, .sub-cards { grid-template-columns: 1fr; gap: 15px; }
+      .card, .sub-card { width: 100%; max-width: 100%; }
+      nav ul { flex-direction: column; }
+      .logo { margin-bottom: 10px; text-align: center; position: static; }
+    }
+    .back-button {
+      width: 90%;
+      max-width: 300px;
+      margin: 20px auto;
     }
   </style>
   <style>
@@ -1448,3 +1492,5 @@
 
 </body>
 </html>
+
+
