--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
       cursor: pointer;
       transition: background-color 0.3s, transform 0.3s;
       margin-top: 10px;
+      margin-bottom: 1cm;
     }
     .order-btn:hover {
       background-color: #FFC107;
@@ -624,7 +625,6 @@
     }
     #margherita:checked ~ #margherita-sub {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
       gap: 20px;
     }
     #taco:checked ~ .menu-container {
