Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
       border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s, transform 0.3s;
-      margin-top: 10px;
-      margin-bottom: 1cm;
+      margin-top: auto;
+      margin-bottom: 10px;
     }
     .order-btn:hover {
       background-color: #FFC107;
@@ -246,7 +246,7 @@
         max-width: 100%;
       }
       nav ul {
-        flex-direction: column;
+        flex-direction: row;
       }
       nav li {
         margin: 5px 0;
@@ -1568,3 +1568,4 @@
 
 </body>
 </html>
+
